--- a/codes.html
+++ b/codes.html
@@ -31,7 +31,7 @@
         </ul>
 
         <div class="text-end">
-          <a href="https://www.youtube.com/channel/UC6XTkd_u4tXzHfSU9xr7vSg" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
+          <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
           <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
           <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
           <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
@@ -70,7 +70,7 @@
                 <p class="card-text">Tất cả Asset của game Pong đều ở đây</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="codes.html" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://drive.google.com/drive/folders/1mFxdaDtgyVBYF169odhoYfoxyLtStaJ8?usp=drive_link" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://www.youtube.com/watch?v=Ule3_14yBbQ&list=PL948RGO9v3bdZjwQRnhJzaMscHdqTnLUw&ab_channel=KigaStudio" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
