--- a/videos.html
+++ b/videos.html
@@ -31,7 +31,7 @@
         </ul>
 
         <div class="text-end">
-          <a href="https://www.youtube.com/channel/UC6XTkd_u4tXzHfSU9xr7vSg" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
+          <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><button type="button" class="btn btn-outline-light me-2">Youtube</button></a>
           <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-outline-light me-2">Facebook</button></a>
           <a href="https://github.com/KietGa" target="_blank"><button type="button" class="btn btn-outline-light me-2">Github</button></a>
           <a href="Donate.html" target="_blank"><button type="button" class="btn btn-warning">Donate</button></a>
@@ -64,6 +64,21 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
+              <img src="img/googleextension/extension-chrome-1.jpg" height="225"> 
+              <div class="card-body">
+                <h2 class="text-info">Google Extension</h2>
+                <p class="card-text">Những google extensions siêu hữu dụng</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://www.youtube.com/watch?v=Q1klLAQk35M&list=PL948RGO9v3be1BH6gTV46Dy3Luu_pk3wH&ab_channel=KigaStudio" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
               <img src="https://play-lh.googleusercontent.com/T9nwXZt7c-vBHURUZEzGTjt-26_ZO-wOsY_yfFwgbpiN7xsgvnontolXnW7hw-HbUlc=w526-h296-rw" height="225"> 
               <div class="card-body">
                 <h2 class="text-info">Pong Tutorial</h2>
@@ -77,6 +92,7 @@
               </div>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
