--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
+              <img src="img/blackjackk/Screenshot 31-05-2024 081724.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Blackjack K</h3>
+                <p class="card-text">Blackjack K là một game blackjack với luật khác blackjack thông thường. Không giới hạn đầu dưới tuy nhiên giới hạn đầu trên là 21. Nếu đạt 21 điểm thắng ngay lập tức và bạn có thể bet thêm tiền bất cứ lúc nào.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/blackjack-k?secret=ajlySw5DO2uLbPCw33qST8oz8k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
               <img src="img/unitychango/Screenshot 24-05-2024 101132.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info">Unity-chan GO!</h3>
@@ -144,7 +159,7 @@
             <div class="card shadow-sm">
               <img src="img/dodgeboom/Screenshot 11-05-2024 223440.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Dodge Boom</h3>
+                <h3 class="text">Dodge Boom</h3>
                 <p class="card-text">Dodge Boom lại là một tựa game vô cùng đơn giản nhưng mà rất khó để thành thục. Nhiệm vụ của bạn là di chuyển chú cừu né khỏi những quả bom của đàn sói, liệu bạn có thể sống sót được bao lâu ?</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -161,7 +176,7 @@
             <div class="card shadow-sm">
               <img src="img/zombiehunter/Screenshot 11-05-2024 223544.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Zombie Hunter</h3>
+                <h3 class="text">Zombie Hunter</h3>
                 <p class="card-text">Nếu bị kẹt trong một không gian hẹp và tối cùng một đám zombie thì bạn có thể sống sót được bao lâu ? Thử ngay Zombie Hunter để biết câu trả lời.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -176,7 +191,7 @@
             <div class="card shadow-sm">
               <img src="img/justaimandshoot/Screenshot 11-05-2024 223645.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Just Aim And Shoot</h3>
+                <h3 class="text">Just Aim And Shoot</h3>
                 <p class="card-text">Chỉ việc ngắm và bắn. Liệu mọi thứ có đơn giản như vậy ? Thử ngay Just Aim And Shoot.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -192,7 +207,7 @@
             <div class="card shadow-sm">
               <img src="img/koutplayed/Screenshot 11-05-2024 230705.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">KOutplayed!</h3>
+                <h3 class="text">KOutplayed!</h3>
                 <p class="card-text">KOutplayed là game đọ nhân phẩm mạnh nhất trong các game. Tất cả mọi thứ đều phụ thuộc vào nhân phẩm của bạn. Dù có như thế nào đi nữa thì ai cũng có thể win.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -209,7 +224,7 @@
             <div class="card shadow-sm">
               <img src="img/lowparkour.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Low Parkour</h3>
+                <h3 class="text">Low Parkour</h3>
                 <p class="card-text">Low Parkour là tựa game 3D đầu tay của Kiga Studio. Lối chơi tương đồng với Merio Adventure nhưng mà nó 3D ?!</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -226,7 +241,7 @@
             <div class="card shadow-sm">
               <img src="img/divisorduel/Screenshot 11-05-2024 230808.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Divisor Duel</h3>
+                <h3 class="text">Divisor Duel</h3>
                 <p class="card-text">Divisor Duel là một trò chơi đấu trí tuệ. Về cơ bản sẽ có một số bắt đầu và một khoảng chết và nhiệm vụ của người chơi là số khởi đầu rơi vào khoảng chết khi vào lượt đối phương. Số khởi đầu sẽ thay đổi bằng cách lấy số đó trừ đi một trong các số mà số đó có thể chia được.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
