--- a/videos.html
+++ b/videos.html
@@ -52,7 +52,7 @@
           <p class="lead text-y text-danger">Red: Shut Down</p>
         </div>
         <div class="col">
-          <img src="img/code.jpg" width="420" height="240">
+          <img src="img/yt/Screenshot 31-05-2024 082432.jpg" width="420" height="240">
         </div>
         <div class="col-1">
         </div>
