--- a/index.html
+++ b/index.html
@@ -129,18 +129,36 @@
               </div>
             </div>
           </div>
-
+          
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/zombiehunter/Screenshot 11-05-2024 223544.jpg" height="225"> 
+              <img src="img/maicap/Screenshot 19-05-2024 212707.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-success">Zombie Hunter</h3>
-                <p class="card-text">Nếu bị kẹt trong một không gian hẹp và tối cùng một đám zombie thì bạn có thể sống sót được bao lâu ? Thử ngay Zombie Hunter để biết câu trả lời.</p>
+                <h3 class="text-success">Mai Cap</h3>
+                <p class="card-text">Fake Mai Cờ Ráp Beta.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/floopybird.jpg" height="225"> 
+              <div class="card-body">
+                <h2 class="text-success">Floppy Bird</h2>
+                <p class="card-text">Floppy Bird là tựa game Unity đầu tiên được Kiga sản xuất và nó khá là thiếu hoàn thiện. Tựa game lấy ý tưởng từ Flappy Bird nổi tiếng một thời.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="FloppyBird.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/floppy-bird?secret=ORIApYW6fBqXKjl4sg6aUFdWfI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
@@ -148,14 +166,13 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/bong/Screenshot-20-05-2024 13_43_37.jpg" height="225"> 
+              <img src="img/zombiehunter/Screenshot 11-05-2024 223544.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-warning">Bong</h3>
-                <p class="card-text">Bong là một game cực kì đơn giản rồi nhưng mà chơi thì vẫn cứ cuốn.</p>
+                <h3 class="text-warning">Zombie Hunter</h3>
+                <p class="card-text">Nếu bị kẹt trong một không gian hẹp và tối cùng một đám zombie thì bạn có thể sống sót được bao lâu ? Thử ngay Zombie Hunter để biết câu trả lời.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
@@ -251,13 +268,14 @@
 
           <div class="col">
             <div class="card shadow-sm">
-              <img src="img/maicap/Screenshot 19-05-2024 212707.jpg" height="225"> 
+              <img src="img/bong/Screenshot-20-05-2024 13_43_37.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text">Mai Cap</h3>
-                <p class="card-text">Fake Mai Cờ Ráp Beta.</p>
+                <h3 class="text">Bong</h3>
+                <p class="card-text">Bong là một game cực kì đơn giản rồi nhưng mà chơi thì vẫn cứ cuốn.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
@@ -396,24 +414,6 @@
                     <a href="https://kiga-studio.itch.io/battle-percent-20?secret=fU19mo6ufgowv6bx6Uo1GKLgWE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">  21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/floopybird.jpg" height="225"> 
-              <div class="card-body">
-                <h2>Floppy Bird</h2>
-                <p class="card-text">Floppy Bird là tựa game Unity đầu tiên được Kiga sản xuất và nó khá là thiếu hoàn thiện. Tựa game lấy ý tưởng từ Flappy Bird nổi tiếng một thời.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="FloppyBird.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/floppy-bird?secret=ORIApYW6fBqXKjl4sg6aUFdWfI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/floppy-bird-web?secret=GBX4h2Rloz7ri7nKws7ktmLws" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">   21/05/24</small>
                 </div>
               </div>
             </div>
