--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+           <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Kitchen Chaos</h3>
+                <p class="card-text">Siêu phẩm game mùa hè năm nay! Giả lập làm đầu bếp quán mắc đô nờ. Sẽ có Update siêu lớn trong tương lai.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col">
             <div class="card shadow-sm">
               <img src="img/blackjackk/Screenshot 31-05-2024 081724.jpg" height="225"> 
@@ -81,6 +98,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card shadow-sm">
               <img src="img/unitychango/Screenshot 24-05-2024 101132.jpg" height="225"> 
@@ -96,6 +114,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card shadow-sm">
               <img src="img/unityworld3d/Screenshot 30-05-2024 081038.jpg" height="225"> 
