--- a/videos.html
+++ b/videos.html
@@ -62,6 +62,23 @@
     <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/scratch.jpg" height="225"> 
+              <div class="card-body">
+                <h2 class="text-info">Scratch Tutorial</h2>
+                <p class="card-text">Cách làm ra tựa game mà không cần code</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://www.youtube.com/watch?v=9KAjXpI3u8I&list=PL948RGO9v3bdpcc_evI5P53H_ZLnjZlCO&ab_channel=KigaStudio" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play List</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col">
             <div class="card shadow-sm">
               <img src="img/googleextension/extension-chrome-1.jpg" height="225"> 
