--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Space Spector</h3>
+                <p class="card-text">Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
            <div class="col">
             <div class="card shadow-sm">
               <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
@@ -75,55 +91,6 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/blackjackk/Screenshot 31-05-2024 081724.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Blackjack K</h3>
-                <p class="card-text">Blackjack K là một game blackjack với luật khác thông thường. Không giới hạn đầu dưới tuy nhiên giới hạn đầu trên là 21. Nếu đạt 21 điểm thắng ngay lập tức và bạn có thể bet thêm tiền bất cứ lúc nào.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/blackjack-k?secret=ajlySw5DO2uLbPCw33qST8oz8k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/blackjack-k-web?secret=0EUfFR9pSznlS4357ELqQT2chI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/unitychango/Screenshot 24-05-2024 101132.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Unity-chan GO!</h3>
-                <p class="card-text">Low Pakour phiên bản gái alime siêu chi. Nhưng mới làm được 1 màn...</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/unity-chan-go?secret=Ge7bqHmXLqi0V5BRe8Kn8rQuY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">21/05/24</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/unityworld3d/Screenshot 30-05-2024 081038.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">Unity World 3D</h3>
-                <p class="card-text">Hay tên gọi khác là The Exploxer. Đây là 1 game của Unity chia sẻ cho các dev. Tôi chỉ sửa một chút thôi :))</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://drive.google.com/drive/folders/1vvotTx2qurMN3Q3_R9lpKVVzLDsG-ais?usp=drive_link" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">21/05/24</small>
                 </div>
@@ -280,6 +247,55 @@
                     <a href="https://scratch.mit.edu/projects/874792956/" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">  21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/blackjackk/Screenshot 31-05-2024 081724.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">Blackjack K</h3>
+                <p class="card-text">Blackjack K là một game blackjack với luật khác thông thường. Không giới hạn đầu dưới tuy nhiên giới hạn đầu trên là 21. Nếu đạt 21 điểm thắng ngay lập tức và bạn có thể bet thêm tiền bất cứ lúc nào.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/blackjack-k?secret=ajlySw5DO2uLbPCw33qST8oz8k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/blackjack-k-web?secret=0EUfFR9pSznlS4357ELqQT2chI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/unitychango/Screenshot 24-05-2024 101132.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">Unity-chan GO!</h3>
+                <p class="card-text">Low Pakour phiên bản gái alime siêu chi. Nhưng mới làm được 1 màn...</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://kiga-studio.itch.io/unity-chan-go?secret=Ge7bqHmXLqi0V5BRe8Kn8rQuY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/unityworld3d/Screenshot 30-05-2024 081038.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">Unity World 3D</h3>
+                <p class="card-text">Hay tên gọi khác là The Exploxer. Đây là 1 game của Unity chia sẻ cho các dev. Tôi chỉ sửa một chút thôi :))</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="https://drive.google.com/drive/folders/1vvotTx2qurMN3Q3_R9lpKVVzLDsG-ais?usp=drive_link" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">21/05/24</small>
                 </div>
               </div>
             </div>
